--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.map": "^4.6.0",
+    "mongodb": "^3.1.10",
     "normalize-port": "^1.0.0",
     "query-string": "^6.2.0",
     "tokenizer2": "^2.0.1",
