--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,4 @@
-# Uncomment if you'd like to see verbose logging
-# DEBUG=*
-
 SLACK_BOT_TOKEN=
-SLACK_VERIFICATION_TOKEN=
-SLACK_WEBHOOK_URL=
+SLACK_SIGNING_SECRET=
 MONGO_URL=
 MONGO_DATABASE=
