--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@slack/sample-message-menus",
+  "name": "@jlafourc/polo",
   "version": "1.0.0",
   "private": true,
-  "description": "An example Slack app that demonstrates use of Message Menus",
+  "description": "A slack poll bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nearleyc": "nearleyc grammar.ne -o grammar.js"
   },
-  "author": "Ankur Oberoi <aoberoi@gmail.com>",
+  "author": "Julien Lafourcade <julien.lafourcade@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^3.19.0",
@@ -16,12 +16,12 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
-    "@slack/client": "^3.9.0",
-    "@slack/interactive-messages": "^0.1.1",
-    "axios": "^0.16.1",
-    "body-parser": "^1.17.1",
-    "dotenv": "^4.0.0",
-    "express": "^4.15.2",
+    "@slack/client": "^4.8.0",
+    "@slack/interactive-messages": "^1.0.2",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "lodash.clonedeep": "^4.5.0",
     "lodash.map": "^4.6.0",
     "mongodb": "^3.1.10",
